--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -58,8 +58,8 @@ add_subdirectory(executor)
 if (WASMEDGE_BUILD_SHARED_LIB)
   add_subdirectory(api)
 endif()
-add_subdirectory(host/wasmedge_process)
 add_subdirectory(host/wasi)
+add_subdirectory(plugins/wasmedge_process)
 add_subdirectory(externref)
 add_subdirectory(expected)
 add_subdirectory(span)
