[Host] Introduce the host module `hello_caller_host`

--- a/lib/host/hello_caller_host/CMakeLists.txt
+++ b/lib/host/hello_caller_host/CMakeLists.txt
@@ -1,9 +1,9 @@
-WASMEDGE_ADD_LIBRARY(hello_caller_host
+wasmedge_add_library(wasmedgeHostModuleHelloCallerHost
 	hellocaller_mod.cpp
 	hellocaller_func.cpp
 )
 
-TARGET_LINK_LIBRARIES(hello_caller_host
+TARGET_LINK_LIBRARIES(wasmedgeHostModuleHelloCallerHost
 	PUBLIC
 	wasmedgeCommon
 	wasmedgeSystem
